force-app/main/default/main/default/objects/student_info__c/student_info__c.object-meta.xml
<CustomObject>
    <label>student_info</label>
    <nameField>
        <label>student_info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>student_info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>