force-app/main/default/main/default/objects/student_info__c/fields/student_email__c.field-meta.xml
<CustomField>
    <fullName>student_email__c</fullName>
    <label>student_email</label>
    <type>Email</type>
</CustomField>