force-app/main/default/main/default/objects/student_info__c/fields/student_first_name__c.field-meta.xml
<CustomField>
    <fullName>student_first_name__c</fullName>
    <label>student_first_name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>