force-app/main/default/main/default/objects/student_info__c/fields/student_phone__c.field-meta.xml
<CustomField>
    <fullName>student_phone__c</fullName>
    <label>student_phone</label>
    <type>Phone</type>
</CustomField>